# se-cgp

./: .gitignore
imageprocessing/cgb4_imageJ/cgb4/: mazeLUT.lut
imageprocessing/cgb4_imageJ/cgb4/img/: maze4.tif  maze5.tif  maze7.tif
imageprocessing/cgb4_imageJ/cgb4/src/: ConvolutionFilter.java  ImageTransformationFilter.java  Invert_.java  MeanUserRadius_.java  S1910307103_Weingartshofer_04_.java  Sobel_.java
lab/: CMakeLists.txt  lab1.cpp  lab2  lab2.cpp  lab3.cpp  lab4.cpp
ueb01/: CMakeLists.txt  S1910307103_Weingartshofer_01.cpp
ueb02/: CMakeLists.txt  S1910307103_Weingartshofer_02.cpp
